--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="content">
 							<h2>Collective Art & Dynamics (2024)</h2>
 							<p>
-An installation project inspired by my thesis, titled "Performing Arts and Artistic Workshops as Bearers of Individual and Collective Development for Socially Sensitive Groups: Theoretical Approaches and Applications" (Corfu, Greece)</p>
+Installation project inspired by my thesis, titled "Performing Arts and Artistic Workshops as Bearers of Individual and Collective Development for Socially Sensitive Groups: Theoretical Approaches and Applications" (Corfu, Greece)</p>
 							<ul class="actions stacked">
 								<li><a href="https://youtu.be/nLymcxNpxDo">More</a></li>
 							</ul>
@@ -57,7 +57,7 @@ An installation project inspired by my thesis, titled "Performing Arts and Artis
 					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Crave (2022)</h2>
-							<p>A collective performance based on the play "Crave" by Sarah Kane </p>
+							<p>Collective performance based on the play "Crave" by Sarah Kane </p>
 							<ul class="actions stacked">
 								<li><a href="https://youtu.be/LJzfjzCqrug">More</a></li>
 							</ul>
@@ -71,7 +71,7 @@ An installation project inspired by my thesis, titled "Performing Arts and Artis
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Taxidi (2022)</h2>
-							<p>An audiovisual performance for the Ionian University graduation ceremony at St. George's Church in the Old Fortress of Corfu</p>
+							<p>Multimedia performance for the Ionian University graduation ceremony at St. George's Church in the Old Fortress of Corfu</p>
 							<ul class="actions stacked">
 								<li><a href="https://www.youtube.com/watch?v=DB9pFbH9Pfs">More</a></li>
 							</ul>
