--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>About</h2>
-							<p>Xeni Kitzoglou grew up in Athens and graduated from the Audiovisual Arts Department of Ionian University in 2024. She has actively participated in voluntary groups, choral ensembles, and collective actions promoting social solidarity and coexistence in Greece and Spain. Xeni has also completed the Pedagogical Sufficiency Program of the Audiovisual Arts Department (ΠΠΕΤΤΗΧΕ) and remains engaged in this field. In 2022, she took part in the Erasmus Program in Malta, broadening her international academic experience. Xeni has coordinated Art Therapy workshops at festivals, in prisons, and within academic programs. Her main interests include performance, video art and poetry.</p>
+							<p>Xeni Kitzoglou grew up in Athens and graduated from the Audiovisual Arts Department of Ionian University in 2024. She has actively participated in voluntary groups, choral ensembles, and collective actions promoting social solidarity and coexistence in Greece and Spain. Xeni has also completed the Pedagogical Sufficiency Program of the Audiovisual Arts Department (ΠΠΕΤΤΗΧΕ) and remains engaged in this field. In 2022, she took part in the Erasmus Program in Malta, broadening her international academic experience. Xeni has coordinated Art Therapy workshops at festivals, in prisons, and within academic programs. Her main interests include performance, video art and photography.</p>
 						</div>
 
 				<!-- Three -->
