--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="content">
 							<h2>Collective Art & Dynamics (2024)</h2>
 							<p>
-Installation project inspired by my thesis, titled "Performing Arts and Artistic Workshops as Bearers of Individual and Collective Development for Socially Sensitive Groups: Theoretical Approaches and Applications" (Corfu, Greece)</p>
+Installation project inspired by my thesis, titled "Performing Arts and Artistic Workshops as Bearers of Individual and Collective Development for Socially Sensitive Groups: Theoretical Approaches and Applications" </p>
 							<ul class="actions stacked">
 								<li><a href="https://youtu.be/nLymcxNpxDo">More</a></li>
 							</ul>
