--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 									</a>
 									<div class="caption">
 										<h3>Ntoulapa (2022)</h3>
-										<p>Design project based on interviews with LGheBTQI+ individuals (Malta)</p>
+										<p>Design project based on interviews with LGBTQI+ individuals (Malta)</p>
 										<ul class="actions fixed">
 											<li><a href="https://drive.google.com/file/d/1-GEnspvFFpZQxHCoQEHlQy-xOJnvq5io/view?usp=sharing">Details</span></li>
 									</div>
