--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 										<h3>Healing Arts Workshop (2023)</h3>
 										<p>Free Earth Festival (Chalkidiki, Greece)</p>
 										<ul class="actions fixed">
-											<li><a href="https://www.facebook.com/photo/?fbid=823789112463441&set=a.785637432945276">Details</span></li>
+											<li><a href="https://padlet.com/xeniakitz077/free-earth-festival-2023-be3f6w2bxtey9vgb/slideshow/wish/3391270334">Details</span></li>
 										</ul>
 									</div>
 								</article>
