--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 										<img src="images\3.jpg" alt="image" /> 
 									</a>
 									<div class="caption">
-										<h3>The practices of theater and storytelling in Art Therapy (2023) </h3>
+										<h3>Theatre Practice and Narration as part of Art Therapy (2023) </h3>
 										<p>Presentation of individual undergraduate work (Corfu, Greece)</p>
 										<ul class="actions fixed">
 											<li><a href="https://avarts.ionio.gr/festival/2023/en/artworks/1074/">Details</span></li>
