--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 										<h3>True tree workshop (2024)</h3>
 										<p>Workshop at Papoura (Athens, Greece)</p>
 										<ul class="actions fixed">
-											<li><a href="https://www.instagram.com/p/DCkBpFdoiAH/">Details</span></li> 
+											<li><a href="https://padlet.com/xeniakitz077/true-tree-workshop-h774ld1ba3ya69ht/slideshow/wish/3392742759">Details</span></li> 
 
 									</div>
 								</article>
