--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 										<img src="images\18.jpg" alt="image" />
 									</a>
 									<div class="caption">
-										<h3>Pop-Up Group Exhibition (2024)</h3>
+										<h3>Anapnoi (2024)</h3>
 										<p>Video art (Athens, Greece)</p>
 										<ul class="actions fixed">
 											<li><a href="https://youtu.be/m8LqANtQosU">Details</span></li>
