--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 								</article>
 									<article>
 									<a href="images\18.jpg" class="image">
-										<img src="https://github.com/Xenikitz077/xenikitzoglou.com/blob/main/images/18.png?raw=true" alt="image" />
+										<img src="https://github.com/Xenikitz077/xenikitzoglou.com/blob/main/images/18.png?raw=true" />
 									</a>
 									<div class="caption">
 										<h3>Anapnoi (2024)</h3>
