--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								</article>
 									<article>
+									<a href="images\21.jpg" class="image">
+										<img src="https://github.com/Xenikitz077/xenikitzoglou.com/blob/main/images/21.jpg?raw=true" />
+									</a>
+									<div class="caption">
+										<h3>Body Tells (2025)</h3>
+										<p>Collective performace (Athens, Greece)</p>
+										<ul class="actions fixed">
+											<li><a href="https://www.instagram.com/reel/DKHrc-eoNlw/">Details</span></li>
+									</div>
+								</article>
+									<article>
 									<a href="images\18.jpg" class="image">
 										<img src="https://github.com/Xenikitz077/xenikitzoglou.com/blob/main/images/18.png?raw=true" />
 									</a>
