--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>About</h2>
-							<p>Xeni Kitzoglou grew up in Athens and graduated from the Audiovisual Arts Department of Ionian University in 2024. She has actively participated in voluntary groups, choral ensembles, and collective actions promoting social solidarity and coexistence in Greece and Spain. Xeni has also completed the Pedagogical Sufficiency Program of the Audiovisual Arts Department (ΠΠΕΤΤΗΧΕ) and remains engaged in this field. In 2022, she took part in the Erasmus Program in Malta, broadening her international academic experience. Xeni has coordinated Art Therapy workshops at festivals, in prisons, and within academic programs. Her main interests include performance, video art and photography.</p>
-						</div>
+Xeni/a Kitzoglou grew up in Athens and graduated in 2024 from the Audiovisual Arts Department at Ionian University, where she also completed the Pedagogical Sufficiency Program. She has coordinated Art Therapy workshops at festivals, in Greek prisons, and within academic programs in Malta. Her main mediums include performance, video art, and photography. She is currently enrolled in the Master’s Art Therapy program at CCAD in Cork.	</div>
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-right content-align-right image-position-center onscroll-image-fade-in">
@@ -113,17 +112,6 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 											<li><a href="https://youtu.be/m8LqANtQosU">Details</span></li>
 									</div>
 								</article>
-								<article>
-									<a href="images\16.jpg" class="image">
-										<img src="images\16.jpg" alt="image" />
-									</a>
-									<div class="caption">
-										<h3>Collective Art & Dynamics (2024)</h3>
-										<p>Installation (Athens, Greece)</p>
-										<ul class="actions fixed">
-											<li><a href="https://padlet.com/xeniakitz077/collectice-art-dynamics-3j97wcse3v1h3xye">Details</span></li>
-									</div>
-								</article>
 									<article>
 									<a href="images\10.png" class="image">
 										<img src="images\10.png" alt="image" />
@@ -133,28 +121,6 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 										<p>Video art (Athens, Greece)</p>
 										<ul class="actions fixed">
 											<li><a href="https://youtu.be/Ovx6QP067hg">Details</span></li>
-									</div>
-								</article>
-								<article>
-									<a href="images\9.png" class="image">
-										<img src="images\9.png" alt="image" />
-									</a>
-									<div class="caption">
-										<h3>A day with ellie (2024)</h3>
-										<p>Portrait documentary of Ellie (Athens, Greece)</p>
-										<ul class="actions fixed">
-											<li><a href="https://youtu.be/vu8L-Q0dYhs">Details</span></li>
-									</div>
-									</article>
-								<article>
-									<a href="images\20.png" class="image">
-										<img src="images\20.png" alt="image" />
-									</a>
-									<div class="caption">
-										<h3>Dead silence (2023)</h3>
-										<p>Portrait documentary of Kal (Athens, Greece)</p>
-										<ul class="actions fixed">
-											<li><a href="https://youtu.be/QzdEy5W424k">Details</span></li>
 									</div>
 								</article>
 								<article>
@@ -169,18 +135,6 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 									</div>
 								</article>
 								<article>
-									<a href="images\3.jpg" class="image">
-										<img src="images\3.jpg" alt="image" /> 
-									</a>
-									<div class="caption">
-										<h3>Theatre Practice and Narration as part of Art Therapy (2023) </h3>
-										<p>Presentation of individual undergraduate work (Corfu, Greece)</p>
-										<ul class="actions fixed">
-											<li><a href="https://avarts.ionio.gr/festival/2023/en/artworks/1074/">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
 									<a href="images\6.png" class="image">
 										<img src="images\6.png" alt="image" />
 									</a>
@@ -192,17 +146,6 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 									</div>
 								</article>
 								<article>
-									<a href="images\7.png" class="image">
-										<img src="images\7.png" alt="image" />
-									</a>
-									<div class="caption">
-										<h3>Ntoulapa (2022)</h3>
-										<p>Design project based on interviews with LGBTQI+ individuals (Malta)</p>
-										<ul class="actions fixed">
-											<li><a href="https://drive.google.com/file/d/1-GEnspvFFpZQxHCoQEHlQy-xOJnvq5io/view?usp=sharing">Details</span></li>
-									</div>
-								</article>
-								<article>
 									<a href="images\1.jpg" class="image">
 										<img src="images\1.jpg" alt="image" />
 									</a>
@@ -211,28 +154,6 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 										<p>Collective performance (Corfu, Greece)</p>
 										<ul class="actions fixed">
 											<li><a href="https://avarts.ionio.gr/festival/2023/en/artworks/1071/">Details</span></li>
-									</div>
-								</article>
-								<article>
-									<a href="images\8.png" class="image">
-										<img src="images\8.png" alt="image" />
-									</a>
-									<div class="caption">
-										<h3>16 (2021)</h3>
-										<p>Video performance for a course at the Audiovisual Arts University (Corfu, Greece)</p>
-										<ul class="actions fixed">
-											<li><a href="https://www.youtube.com/watch?v=_Vr8-Oo2XvE">Details</span></li>
-									</div>
-								</article>
-								<article>
-									<a href="images\11.png" class="image">
-										<img src="images\11.png" alt="image" />
-									</a>
-									<div class="caption">
-										<h3>The Corfu Project (2021) </h3>
-										<p>A documentary on how university students view Corfu (Corfu, Greece)</p>
-										<ul class="actions fixed">
-											<li><a href="https://youtu.be/aR-mn59MZ9o">Details</span></li>
 									</div>
 								</article>
 								<article>
@@ -361,4 +282,5 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 
 	</body>
 </html>
+
 
