--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 									</div>
 								</article>
 								<article>
-									<a href="images\15.png" class="image">
-										<img src="images\15.png" alt="image" />
+									<a href="images\9.png" class="image">
+										<img src="images\9.png" alt="image" />
 									</a>
 									<div class="caption">
-										<h3>A night with ellie (2023)</h3>
-										<p>Short documentary about Ellie (Aegina, Greece)</p>
+										<h3>A day with ellie (2024)</h3>
+										<p>Portrait documentary of Ellie (Athens, Greece)</p>
 										<ul class="actions fixed">
-											<li><a href="https://youtu.be/thrNtXuweHo">Details</span></li>
+											<li><a href="https://youtu.be/vu8L-Q0dYhs">Details</span></li>
 									</div>
-								</article>
+									</article>
 								<article>
 									<a href="images\6.png" class="image">
 										<img src="images\6.png" alt="image" />
@@ -282,5 +282,6 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 
 	</body>
 </html>
+
 
 
