--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 										<h3>Lalava workshops (2024)</h3>
 										<p> A series of workshops with LGBTQI+ individuals (Athens, Greece)</p>
 										<ul class="actions fixed">
-											<li><a href="https://youtu.be/o5_M2yt-ud0">Details</span></li> 
+											<li><a href="https://youtu.be/Ovx6QP067hg">Details</span></li> 
 
 									</div>
 								</article>
@@ -282,6 +282,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 
 	</body>
 </html>
+
 
 
 
