--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>About</h2>
-Xeni/a Kitzoglou grew up in Athens and graduated in 2024 from the Audiovisual Arts Department at Ionian University, where she also completed the Pedagogical Sufficiency Program. She has coordinated Art Therapy workshops at festivals, in Greek prisons, and within academic programs in Malta. Her main mediums include performance, video art, and photography. She is currently enrolled in the Master’s Art Therapy programme at CCAD in Cork.	</div>
+Xeni/a Kitzoglou grew up in Athens and graduated in 2024 from the Audiovisual Arts Department at Ionian University, where she also completed the Pedagogical Sufficiency Program. She has coordinated Art Therapy workshops at festivals, in Greek prisons, and within academic programs in Malta. Her main mediums include performance, video art, and photography. She is currently enrolled in the Master’s Art Therapy programme at CCAD in Cork, Ireland.	</div>
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-right content-align-right image-position-center onscroll-image-fade-in">
@@ -282,6 +282,7 @@ Installation project inspired by my thesis, titled "Performing Arts and Art Work
 
 	</body>
 </html>
+
 
 
 
